mobile: fix overflow bad rendering

--- a/static/hugo-theme-console/css/console.css
+++ b/static/hugo-theme-console/css/console.css
@@ -228,7 +228,7 @@ figure {
 @media only screen and (max-width: 850px) {
     .site-name {
         width: 2ch;
-        overflow: hidden;
+        overflow: clip;
         display: inline-block;
     }
 
